--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="asset/css/output.css">
 </head>
-<body>
-    <h1 class="">hello</h1>
+<body class="bg-gray-600 p-5 mx-10 my-auto">
+    <div class="bg-white px-4 py-5 rounded flex  flex-col  items-center justify-between   shadow-md sm:flex-row space-y-5">
+        <div>
+            <h1 class="font-bold">hello</h1>
+        <p class=" font-extralight">tailwind css utilite framework</p>
+        </div>
+        <button class="bg-orange-400 px-6 py-3 text-white rounded-full w-30 hover:bg-orange-500">learn now</button>
+    </div>
 </body>
 </html>
