--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <h1 class="font-extrabold text-center my-4 text-2xl text-slate-800 font-sans">Log in</h1>
             <div>
                 <label for="name" class="block text-sm font-medium text-slate-700 my-3">Email</label>
-            <input type="email" name="name" id="name" placeholder="Username" class="block w-full border-2 border-slate-200 rounded-md focus:outline-none p-2 focus:invalid:border-rose-500 invalid:text-rose-500  focus:border-blue-400 text-slate-500 font-medium">
+            <input type="email" name="name" id="name" placeholder="Username" class="peer block w-full border-2 border-slate-200 rounded-md focus:outline-none p-2 focus:invalid:border-rose-500 invalid:text-rose-500  focus:border-blue-400 text-slate-500 font-medium">
+            <p class="mt-2 invisible peer-invalid:visible text-rose-500 text-sm">
+                Please provide a valid email address.
+              </p>
             </div>
             <div>
                 <label for="Password" class="block text-sm font-medium text-slate-700 my-3">Password</label>
@@ -28,6 +31,15 @@
             </div>
             <button class="bg-blue-600 my-7 text-white w-full py-2 text-sm font-medium rounded-md">log in</button>
         </form>
+        <!-- group with pseudo class -->
+
+        <a href="#" class="group block max-w-xs mx-auto rounded-lg p-6 bg-white ring-1 ring-slate-900/5 shadow-lg space-y-3 hover:bg-sky-500 hover:ring-sky-500">
+            <div class="flex items-center space-x-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h5.175q.4 0 .763.15t.637.425L12 6h8q.825 0 1.413.588T22 8v10q0 .825-.587 1.413T20 20z" class="fill-current text-sky-500 group-hover:text-white"/></svg>
+              <h3 class="text-slate-900 group-hover:text-white text-sm font-semibold">New project</h3>
+            </div>
+            <p class="text-slate-500 group-hover:text-white text-sm">Create a new project from a variety of starting templates.</p>
+          </a>
     </section>
 </body>
 </html>
